# CUCKOO-HASH

./: CMakeLists.txt  CuckooHash Lib详细说明书.docx  README.md  cuckoohash_config.hh  main.cpp  random_dataset_init.py
head files/: main.cpp  my_hash.h
